--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
-<header class="site-header">
+<header class="header">
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <a class="link logo" href="{{ site.baseurl }}/">{{ site.title }}</a>
 
 
   </div>
