--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,6 +6,7 @@
   <body>
 
     {% include header.html %}
+    {% include hero.html %}
     <div class="page-content">
       <div class="wrapper">
         {{ content }}
