restructure site and redesign

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,8 +4,8 @@
   {% include head.html %}
 
   <body>
-
     {% include header.html %}
+    {% include hero.html %}
     <div class="page-content">
       <div class="wrapper">
         {{ content }}
