--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,5 @@
-<header class="site-header">
-
+<header class="header">
   <div class="wrapper">
-
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
-
-
+    <a class="link logo" href="{{ site.baseurl }}/">{{ site.title }}</a>
   </div>
-
 </header>
