--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,3 +1,31 @@
+
+
+
+
+// Our variables
+//delete
+$serif-font-family: 'Lora', serif;
+
+$font-family-1: 'Bungee', sans-serif;
+$font-family-2: 'Montserrat', sans-serif;
+
+$spacing-unit:     30px;
+$spacing-unitx2:   60px;
+$text-color:       #111;
+$bodyBackground: #F3F3F3;
+$eufracioColor:      #ff0094;
+$eufracioColor2:      #ffb081;
+$eufracioColor3:      #fe7277;
+$eufracioColor4:      #0ff;
+$black:            #000000;
+$white:            #ffffff;
+
+// Width of the content area
+$content-width:    900px;
+
+
+
+
 /**
  * Reset some basic elements
  */
@@ -15,9 +43,10 @@ dl, dd, ol, ul, figure {
  * Basic styling
  */
 body {
-    font: $base-font-weight #{$base-font-size}/#{$base-line-height} $serif-font-family;
-    color: $text-color;
-    background-color: $background-color;
+    font-size: 10px;
+    font-family: $font-family-2;
+    color: $black;
+    background-color: $bodyBackground;
     -webkit-text-size-adjust: 100%;
     -webkit-font-feature-settings: "kern" 1;
     -moz-font-feature-settings: "kern" 1;
@@ -29,86 +58,28 @@ body {
 
 
 /**
- * Set `margin-bottom` to maintain vertical rhythm
- */
-h1, h2, h3, h4, h5, h6,
-p, blockquote, pre,
-ul, ol, dl, figure,
-%vertical-rhythm {
-    margin-bottom: $spacing-unit / 2;
-}
-
-
-
-/**
  * Images
  */
-img {
+img, .images {
     max-width: 100%;
     vertical-align: middle;
 }
 
 
-
-/**
- * Figures
- */
-figure > img {
-    display: block;
-}
-
-figcaption {
-    font-size: $small-font-size;
-}
-
-
-
-/**
- * Lists
- */
-ul, ol {
-    margin-left: $spacing-unit;
-}
-
-li {
-    > ul,
-    > ol {
-         margin-bottom: 0;
-    }
-}
-
-
-
-/**
- * Headings
- */
-h1, h2, h3, h4, h5, h6 {
-    font-weight: $base-font-weight;
-    font-family: $sans-font-family;
-}
-
-
-
 /**
  * Links
  */
-a {
-    color: $brand-color;
+.link {
+    color: $eufracioColor;
     text-decoration: none;
-}
-
-p {
-    font-size: 1.2em;
-    line-height: 1.5;
-    color: lighten( $black, 40%);
 }
 
 /**
  * Blockquotes
  */
-blockquote {
-    color: $grey-color;
-    border-left: 4px solid $grey-color-light;
+.blockquote {
+    color: $black;
+    border-left: 4px solid $black;
     padding-left: $spacing-unit / 2;
     font-size: 18px;
     letter-spacing: -1px;
@@ -127,7 +98,7 @@ blockquote {
 pre,
 code {
     font-size: 15px;
-    border: 1px solid $grey-color-light;
+    border: 1px solid $black;
     border-radius: 3px;
     background-color: #eef;
 }
@@ -147,8 +118,6 @@ pre {
     }
 }
 
-
-
 /**
  * Wrapper
  */
@@ -160,44 +129,4 @@ pre {
     padding-right: $spacing-unit;
     padding-left: $spacing-unit;
     @extend %clearfix;
-
-    @include media-query($on-laptop) {
-        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
-        max-width:         calc(#{$content-width} - (#{$spacing-unit}));
-        padding-right: $spacing-unit / 2;
-        padding-left: $spacing-unit / 2;
-    }
-}
-
-
-
-/**
- * Clearfix
- */
-%clearfix {
-
-    &:after {
-        content: "";
-        display: table;
-        clear: both;
-    }
-}
-
-
-
-/**
- * Icons
- */
-.icon {
-
-    > svg {
-        display: inline-block;
-        width: 16px;
-        height: 16px;
-        vertical-align: middle;
-
-        path {
-            fill: $grey-color;
-        }
-    }
 }
