--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -68,3 +68,13 @@
     .vi    { color: #008080 } // Name.Variable.Instance
     .il    { color: #099 } // Literal.Number.Integer.Long
 }
+
+
+//custom inline code
+.code-term, .code {
+  background: $eufracioColor2;
+  padding: 2px 4px;
+  font-size: 90%;
+  color: $white;
+  font-style: normal;
+}
