--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -2,7 +2,7 @@
   padding: 30px 0;
 }
 .post_content {
-  padding: $spacing-unit / 2;
+  padding: $spacing-unit / 2 100px;
   border: 1px solid lighten($black, 90%);
   background: $white;
   h2 {
