hero update for homepage

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,4 +1,13 @@
 <div class="hero">
-  <h2 class="headline">i 💛💛💛 webdev.</h2>
-  <h2 class="headline">i write about webdev <br />and making web things.</h2>
+  <div class="hero_container">
+    <div class="imgContainer">
+      <a href="" class="link">
+        <img src="../img/teaser.jpg" class="image" alt="Click to watch my youtube channel">
+      </a>
+    </div>
+    <div class="textContainer">
+      <h2 class="headline">Watch me create web apps <br />on my new youtube channel</h2>
+      <a href="https://www.youtube.com/watch?v=kNiwhyAdPG0" target="_blank" class="button">Watch Now</a>
+    </div>
+  </div>  
 </div>
