--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -6,7 +6,7 @@
       </a>
     </div>
     <div class="textContainer">
-      <h2 class="headline">Watch me create web apps <br />on my new youtube channel</h2>
+      <h2 class="headline">Watch me create web apps <br />on my new youtube channel!</h2>
       <a href="https://www.youtube.com/watch?v=kNiwhyAdPG0" target="_blank" class="button">Watch Now</a>
     </div>
   </div>  
