--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,12 +6,12 @@
   <body>
     {% include header.html %}
     {% include hero.html %}
+    {% include socialSection.html %}
     <div class="page-content">
       <div class="wrapper">
         {{ content }}
       </div>
     </div>
-
     {% include footer.html %}
 
   </body>
