touch ups with hero, social section, footer and post

--- a/_includes/socialSection.html
+++ b/_includes/socialSection.html
@@ -4,31 +4,31 @@
       <a href="https://www.youtube.com/channel/UCEXc49__z8-6zAujyBZLGsQ" target="_blank" class="imgContainer">
         <img src="../img/yt.png" alt="youtube">
       </a>
-      <p>Watch my latest videos</p>
+      <p>Watch my latest episodes on web apps</p>
     </div>
     <div class="oneFifthColumn">
       <a href="https://www.instagram.com/eufrac.io/" target="_blank" class="imgContainer">
         <img src="../img/ig.png" alt="youtube">
       </a>
-      <p>Follow my dev journey</p>
+      <p>Where I document my day as a developer</p>
     </div>
     <div class="oneFifthColumn">
       <a href="https://www.snapchat.com/add/mreufracio" target="_blank" class="imgContainer">
         <img src="../img/sc.png" alt="snapchat">
       </a>
-      <p>Were I document my dev process</p>
+      <p>Where I document my day as Adrian :D</p>
     </div>
     <div class="oneFifthColumn">
       <a href="https://www.facebook.com/AdrianEufracioDev/" target="_blank" class="imgContainer">
         <img src="../img/fb.png" alt="facebook">
       </a>
-      <p>My hub for all my dev activites</p>
+      <p>Discussing and connecting with devs</p>
     </div>
     <div class="oneFifthColumn">
       <a href="https://github.com/a0r1an/" target="_blank" class="imgContainer">
         <img src="../img/gh.png" alt="github">
       </a>
-      <p>All of my code bases</p>
+      <p>The code for all my web apps</p>
     </div>
   </div>  
 </section>
