--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -1,7 +1,6 @@
 .hero {
     width: 100%;
-    background: $eufracioColor2 url(../img/shapesBackground.png);
-    background-image: url(../img/shapesBackground.png), linear-gradient(to bottom,  $eufracioColor2 1%, $eufracioColor3 100%);
+    background: #7919e5 url(../img/shapesBackground.png);
     background-size: contain;
     display: flex;
     flex-wrap: wrap;
@@ -56,6 +55,10 @@
         text-transform: uppercase;
         margin: 0 10px 0;
     }
+    .text {
+        text-align: center;
+        color: $white;
+    }
 }
 
 .hero-post {
@@ -69,7 +72,7 @@
 
 @media (min-width:480px) {
     .hero {
-        min-height: 350px;
+        min-height: 250px;
         .headline {
             font-size:3.6em;
         }
@@ -80,6 +83,7 @@
 }
 @media (min-width:768px) {
     .hero {
+        min-height: 350px;
         .textContainer {
             .headline {
                 font-size: 3.2em;
