Added mailchimp newsletter to site, updated css

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -17,6 +17,7 @@ $eufracioColor:      #ff0094;
 $eufracioColor2:      #ffb081;
 $eufracioColor3:      #fe7277;
 $eufracioColor4:      #0ff;
+$eufracioColor5:      #7919e5;
 $black:            #000000;
 $white:            #ffffff;
 
