--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
     width: 100%;
-    background: #7919e5 url(../img/shapesBackground.png);
+    background: $eufracioColor5 url(../img/shapesBackground.png);
     background-size: contain;
     display: flex;
     flex-wrap: wrap;
