--- a/css/main.scss
+++ b/css/main.scss
@@ -15,6 +15,7 @@
 
 @import "components/header";
 
+@import "components/newsletter";
 @import "components/hero";
 @import "components/feed";
 @import "components/post";
